[package]
name = "rate-delay-simulation"
version = "0.1.0"
authors = ["bold <bold@cryptoguru.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
async-std = { version = "1.2.0", features = ["unstable", "attributes"] }
structopt = "0.3.5"
csv = "1.1.1"
serde = { version = "1.0.103", features = ["derive"] }
chrono = "0.4.10"
async-trait = "0.1.21"
